[gd_scene load_steps=38 format=3 uid="uid://btou6innm0pc8"]

[ext_resource type="Texture2D" uid="uid://bxgn46gkl2xfk" path="res://Art/Player/Player_FX_Exhaust.png" id="1_fkybt"]
[ext_resource type="Texture2D" uid="uid://fhna0fh82xw3" path="res://Art/Player/Player.png" id="1_v0iea"]
[ext_resource type="Script" uid="uid://dheuk3yk4dxyy" path="res://Scenes/Player/player.gd" id="1_x3wgy"]
[ext_resource type="PackedScene" uid="uid://b4c17usa6vwgb" path="res://Scenes/Components/SFXPlayer.tscn" id="2_8erm5"]
[ext_resource type="Texture2D" uid="uid://y1svbnr052jy" path="res://Art/Player/Player_FX_BackBlast_Small.png" id="3_x3wgy"]
[ext_resource type="Texture2D" uid="uid://w3c5xx80xc43" path="res://Art/Player/Player_FX_BackBlast_Medium.png" id="4_3smsa"]
[ext_resource type="Texture2D" uid="uid://dm2sixk8n14rf" path="res://Art/Player/Player_FX_BackBlast_Large.png" id="5_8erm5"]
[ext_resource type="AudioStream" uid="uid://dt17nyvwl738h" path="res://Sound/Take_Off.wav" id="7_3smsa"]
[ext_resource type="Texture2D" uid="uid://bgyuroc4nmou2" path="res://Art/Player/Player_Death_Explosion.png" id="9_jhyir"]
[ext_resource type="AudioStream" uid="uid://cj35tcycvmp37" path="res://Sound/Player_Death_Beep.wav" id="9_oikmp"]
[ext_resource type="AudioStream" uid="uid://bap1cbeush7fo" path="res://Sound/Player_Death_Explosion.wav" id="10_06tpx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f60y1"]
size = Vector2(20, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igrcy"]
size = Vector2(7, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_jlvik"]
radius = 13.0

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_fkybt")
region = Rect2(0, 11, 10, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_fkybt")
region = Rect2(10, 11, 10, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("1_fkybt")
region = Rect2(20, 11, 10, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("1_fkybt")
region = Rect2(30, 11, 10, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("1_fkybt")
region = Rect2(0, 0, 10, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("1_fkybt")
region = Rect2(10, 0, 10, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("1_fkybt")
region = Rect2(20, 0, 10, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("1_fkybt")
region = Rect2(30, 0, 10, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqcod"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}],
"loop": true,
"name": &"Moving",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("5_8erm5")
region = Rect2(0, 0, 10, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("5_8erm5")
region = Rect2(10, 0, 10, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("5_8erm5")
region = Rect2(20, 0, 10, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_x3wgy")
region = Rect2(0, 0, 5, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_x3wgy")
region = Rect2(5, 0, 5, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_x3wgy")
region = Rect2(10, 0, 5, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("4_3smsa")
region = Rect2(0, 0, 7, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("4_3smsa")
region = Rect2(7, 0, 7, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("4_3smsa")
region = Rect2(14, 0, 7, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_y6uwr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}],
"loop": true,
"name": &"Heavy",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}],
"loop": true,
"name": &"Light",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}],
"loop": true,
"name": &"Medium",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "Intro"
length = 3.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.7, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShipSprite/Exhaust")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"Moving", 1.0, false],
"method": &"play"
}, {
"args": [&"Idle", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShipSprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.6, 2.3, 2.6),
"transitions": PackedFloat32Array(0.68302, 1, 1, 1),
"update": 0,
"values": [Vector2(-106, -12), Vector2(56, -33), Vector2(-2, 4), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShipSprite:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.6, 2.3, 2.6),
"transitions": PackedFloat32Array(0.68302, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.625, 1.625), Vector2(1, 1), Vector2(1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SfxPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [ExtResource("7_3smsa"), 0.0],
"method": &"play_sfx"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"change_player_control_to"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ShipSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3smsa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShipSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShipSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShipSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShipSprite/Flash:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Explosion:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oikmp"]
resource_name = "Die"
length = 2.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShipSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShipSprite/Flash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 1, 1.1, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SfxPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.8, 1.1, 1.25, 1.35, 1.45, 1.55, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [ExtResource("9_oikmp"), 0.0],
"method": &"play_sfx"
}, {
"args": [ExtResource("9_oikmp"), 0.0],
"method": &"play_sfx"
}, {
"args": [ExtResource("9_oikmp"), 0.0],
"method": &"play_sfx"
}, {
"args": [ExtResource("9_oikmp"), 0.0],
"method": &"play_sfx"
}, {
"args": [ExtResource("9_oikmp"), 0.0],
"method": &"play_sfx"
}, {
"args": [ExtResource("9_oikmp"), 0.0],
"method": &"play_sfx"
}, {
"args": [ExtResource("9_oikmp"), 0.0],
"method": &"play_sfx"
}, {
"args": [ExtResource("10_06tpx"), 0.0],
"method": &"play_sfx"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.7, 2.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8erm5"]
_data = {
&"Die": SubResource("Animation_oikmp"),
&"Intro": SubResource("Animation_x3wgy"),
&"RESET": SubResource("Animation_3smsa")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 10
collision_mask = 32
script = ExtResource("1_x3wgy")

[node name="PhysicalCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f60y1")

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 0

[node name="HurtCollision" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-4.5, -1)
shape = SubResource("RectangleShape2D_igrcy")
debug_color = Color(0.830428, 0.0743718, 0.362088, 0.42)

[node name="EXPGrabBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EXPGrabBox"]
shape = SubResource("CircleShape2D_jlvik")
debug_color = Color(0.636392, 0.471608, 0.629994, 0.42)

[node name="SfxPlayer" parent="." instance=ExtResource("2_8erm5")]

[node name="ShipSprite" type="Sprite2D" parent="."]
visible = false
clip_children = 2
texture = ExtResource("1_v0iea")
hframes = 3

[node name="Exhaust" type="AnimatedSprite2D" parent="ShipSprite"]
z_index = -1
position = Vector2(-14, 0)
sprite_frames = SubResource("SpriteFrames_qqcod")
animation = &"Idle"
autoplay = "Idle"
frame = 3
frame_progress = 0.582413

[node name="Flash" type="ColorRect" parent="ShipSprite"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBlast" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(12, -1)
sprite_frames = SubResource("SpriteFrames_y6uwr")
animation = &"Light"

[node name="BulletSpawnPos" type="Marker2D" parent="."]
position = Vector2(11, 0)

[node name="Anims" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8erm5")
}

[node name="VulkanRecoverTimer" type="Timer" parent="."]
one_shot = true

[node name="MissileRecoverTimer" type="Timer" parent="."]
one_shot = true

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_jhyir")
hframes = 2
vframes = 3
